HAWKULAR-927 add gabriel's new metrics.less file. Change overview and fix alignment of elements on overview.

--- a/console/src/main/scripts/plugins/metrics/less/metrics.less
+++ b/console/src/main/scripts/plugins/metrics/less/metrics.less
@@ -876,6 +876,25 @@ p + .form-horizontal {
   width: 300px;
 }
 
+.hk-label-inputs {
+  padding-left: 2em;
+  padding-right: 2em;
+
+  .combobox-container {
+    float: left;
+    width: calc(~"50% - 25px");
+  }
+
+  .hk-label-semicolon {
+    float: left;
+    padding: 0 6px;
+  }
+
+  .btn {
+    margin-left: 1em;
+  }
+}
+
 // Icons
 
 .fa .meaning {
@@ -1817,6 +1836,10 @@ td .fa-comment-o {
   }
 }
 
+th .fa {
+  color: @gray-dark;
+}
+
 // Tiles (copied from Angular Patternfly)
 
 .tiles-view-pf {
@@ -2026,7 +2049,7 @@ h2 + .tiles-view-pf {
 .hk-datasource-tile {
 
   .tile {
-    height: 100%;
+    height: 330px;
 
     .tile-content {
       overflow: inherit;
@@ -2415,6 +2438,91 @@ h2 + .tiles-view-pf {
   }
 }
 
+// Application servers 100% sidebar
+
+html,
+body {
+  height: 100%;
+}
+
+.hk-application-servers {
+  height: calc(~"100% - 62px");
+  position: relative;
+}
+
+.hk-sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  min-height: 100%;
+  width: 20em;
+
+  @media (max-width: @screen-xs-max) {
+    display: none;
+  }
+
+  > div {
+    background: #3a3f43;
+    color: white;
+    padding: 2em;
+  }
+
+  h4 {
+    font-size: ceil(@font-size-base + 1);
+    font-style: italic;
+  }
+
+  .btn-link:hover,
+  a:hover {
+    color: @link-color;
+  }
+
+  .pficon-close {
+    font-size: ceil(@font-size-base - 2);
+  }
+
+  .hk-filter-v-block {
+    padding: 1.5em 0;
+
+    + .hk-filter-v-block {
+      border-top: 1px solid #888;
+    }
+
+    .radio,
+    .checkbox {
+      margin-left: 1.5em;
+    }
+
+    .hk-label-heading {
+      color: white;
+      font-weight: bold;
+
+      .fa {
+        color: white;
+        font-size: @font-size-base;
+      }
+    }
+
+    nav {
+      margin-left: 1.5em;
+      margin-top: 1em;
+
+      a.selected {
+        color: white;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.hk-content-sidebar {
+  @media (min-width: @screen-sm-min) {
+    margin-left: 20em;
+    width: calc(~"100% - 20em");
+  }
+}
+
 // Application server screen
 
 .btn-link.hk-trigger {
@@ -2580,9 +2688,29 @@ section {
 
 .hk-dashboard-block {
 
-  padding-bottom: @grid-gutter-width/2;
   padding-top: @grid-gutter-width/2;
-  height: 120px;
+  //   height: 120px;
+
+  &:nth-child(1),
+  &:nth-child(2) {
+    padding-top: 0;
+
+    h3 {
+      border-top: none;
+      padding-top: 0;
+    }
+  }
+
+  h3 {
+    border-top: 1px solid @table-border-color;
+    margin: 0;
+    padding-top: @grid-gutter-width/2;
+  }
+
+  .card-pf-utilization-details {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
 
   .hk-data-info {
     display: table;
@@ -2605,12 +2733,13 @@ section {
   }
 
   .hk-info {
-    height: 69px; // might change in responsive
+    height: 60px; // might change in responsive
+    text-align: center;
     vertical-align: bottom;
 
-    img {
-      width: 100%; //provisional
-    }
+    display: flex; // supported on new browsers
+    align-items: center;
+    justify-content: center;
   }
 
   .hk-block-title {
